# Media_library

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
src/: routers.py
src/audio_library/: admin.py  models.py  serializers.py  urls.py  views.py
src/audio_library/migrations/: 0001_initial.py  0002_alter_album_name.py
src/base/: classes.py  permissions.py  services.py
src/oauth/: admin.py  models.py  serializers.py  urls.py
src/oauth/endpoint/: auth_views.py  views.py
src/oauth/migrations/: 0001_initial.py
src/oauth/services/: auth_backend.py  base_auth.py  google.py  spotify.py  spotify_state.py
templates/: index.html
templates/oauth/: google_login.html  spotify_login.html
